feat: adding an activate acount mecanism when the client creates a new account/user
